--- a/page7.html
+++ b/page7.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-4q" data-rv-view="159">
+  <section id="ext_menu-4q" data-rv-view="102">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">mobile website creator app</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="163" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.ws/p">open source website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="106" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -86,7 +86,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="tAhrk+P7j358CXlvx98HV2XqxGmKLyMGmpUJs5fTi2j6nwUQyIcJNMd9FX8O80vvMr1IEYTywo0ftO8UivgPrDRV8Rr8IYcAxdSJ+7pz4/Tj1MH9tQA3VrOvyM3etLUL" data-form-email="true">
+                                <input type="hidden" value="mVqU3nNeoaBiiS7I5Rzc3HeHNWoKyQnnOSviEfieLOwuYd4GxNnLbMKFuaLcH7ORfkgAR3KA+5MrVzLUVqsTipQRsh9Si1MDpxb4EZdbXtP+0STKK9O0EDA3cTB9w2rj" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -114,7 +114,7 @@ We will contact you very soon regarding our Early Bird 1 offering via email</div
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4r" data-rv-view="161" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-4r" data-rv-view="104" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
