--- a/page3.html
+++ b/page3.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-v" data-rv-view="76">
+  <section id="ext_menu-v" data-rv-view="79">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="80" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.ws/p">open source website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="83" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -86,7 +86,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="GBUV8ZA8vbz6gBPO7v+vrBqZGOV4/nYODiKAQxhTStg6LcV3jL7vWUUjg2N70rxtdwxk+UPQAr2D74FH+cwU/YcVLR4+rvqrFm/mSJ5klYn0BGChWd8HbyvQ0mAEmzZL" data-form-email="true">
+                                <input type="hidden" value="vuY1aGdIZpJOiI+jgZqHp25N2mH4ywrnt4R30xU7rgOK4yQu03oRWbCmeOSlrgtf27OA6zzsRhSvpcqcTYX1xJmjVxxI8C5E7buaa9sJUs2wgsL7jdOhNzYuOkJbcKsD" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
@@ -112,7 +112,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="78" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-w" data-rv-view="81" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
